@@ -1,4 +1,5 @@
 0.3.8:
+- Switching between tabs can now be made in two ways, either the previous fling gesture method, or by using dedicated buttons which are displayed and hidden along with toolbars. The method is customizable in UI preferences. Default is to use he new buttons. 
 - New options allowing to display or not the application title bar.
 
 0.3.7:
